# django-site-backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yaml  lint.yaml  test.yaml  type_check.yaml
app/: Dockerfile  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
app/.github/workflows/: ci.yaml
app/app/: settings.py  urls.py
app/users/: admin.py  managers.py  models.py  tests.py
app/users/migrations/: 0001_initial.py
app/yasg/: apps.py  urls.py
app/yasg/tests/: test_swagger.py
