[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Andrey K <andrey0kozyrev0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
astroid = "2.15.8"
attrs = "23.2.0"
autopep8 = "2.2.0"
beautifulsoup4 = "4.12.3"
black = "24.4.2"
bleach = "6.1.0"
click = "8.1.7"
coreapi = "2.3.3"
dadata = "21.10.1"
django = "5.0.6"
django-cors-headers = "4.3.1"
django-environ = "0.11.2"
django-filter = "24.2"
django-nested-admin = "4.0.2"
django-parler = "2.3"
django-parler-rest = "2.2"
django-simple-history = "3.7.0"
django-spaghetti-and-meatballs = "0.4.2"
django-stubs = "5.0.2"
djangorestframework = "3.15.2"
djangorestframework-stubs = "3.15.0"
drf-jwt = "1.19.2"
drf-nested-routers = "0.94.1"
drf-writable-nested = "0.7.0"
drf-yasg = "1.21.7"
flake8 = "6.1.0"
flake8-bugbear = "24.4.26"
flake8-cognitive-complexity = "0.1.0"
flake8-django = "1.4"
flake8-multiline-containers = "0.0.19"
flake8-mutable = "1.2.0"
flake8-pie = "0.16.0"
flake8-print = "5.0.0"
flake8-pytest = "1.4"
flake8-pytest-style = "2.0.0"
flake8-variables-names = "0.0.6"
flake8-simplify = "0.21.0"
google-api-python-client = "2.133.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.0"
gunicorn = "22.0.0"
html2text = "2024.2.26"
iniconfig = "2.0.0"
isort = "5.13.2"
lazy-object-proxy = "1.10.0"
markdown = "3.6"
mccabe = "0.7.0"
mixer = "7.2.2"
mypy = "1.10.0"
openpyxl = "3.1.4"
packaging = "24.1"
pandas = "2.2.2"
pep8-naming = "0.14.1"
pexpect = "4.9.0"
pluggy = "1.5.0"
psycopg2-binary = "2.9.9"
pur = "7.3.2"
py = "1.11.0"
pycodestyle = "2.11.0"
pygsheets = "2.0.6"
pylint = "2.17.7"
pyparsing = "3.1.2"
pytest = "7.4.4"
pytest-django = "4.8.0"
pytest-drf = "1.1.3"
pytest-mock = "3.14.0"
pytest-randomly = "3.15"
pytest-xdist = "3.6.1"
pytz = "2024.1"
redbox = "0.2.1"
sentry-sdk = "2.6.0"
six = "1.16.0"
soupsieve = "2.5"
sqlparse = "0.5.0"
toml = "0.10.2"
unidecode = "1.3.8"
webencodings = "0.5.1"
whitenoise = "6.6.0"
wrapt = "1.16.0"
xlrd = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
